# georoost-geojson-loader

./: .gitignore  app.py  pyproject.toml
.streamlit/: config.toml
components/: cilpped_geometry_loader.py  connect_motherduck.py  kokudo_boundary_loader.py  load_page.py  save_memo.py
seeds/: city_code.csv  pref_code.csv
